[gd_scene load_steps=5 format=3 uid="uid://x8lxj32uhe4y"]

[ext_resource type="Script" uid="uid://br55sbmxynx87" path="res://scenes/tutorial.gd" id="1_c13y7"]
[ext_resource type="Texture2D" uid="uid://dlbbhpx2hyqw" path="res://res/assets/icons8-rewind-64.png" id="2_4kmhl"]
[ext_resource type="Texture2D" uid="uid://dlxf00ft208dn" path="res://res/assets/left-icon.png" id="2_8ho6b"]
[ext_resource type="Texture2D" uid="uid://bw5usjwh2jhrk" path="res://res/assets/right-icon.png" id="3_ph3nu"]

[node name="Tutorial" type="CanvasLayer"]
script = ExtResource("1_c13y7")

[node name="BG" type="ColorRect" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.174292, 0.235703, 0.102582, 1)

[node name="RootContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="ActionBarContainer" type="HBoxContainer" parent="RootContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GapContainer" type="Control" parent="RootContainer/ActionBarContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BackButton" type="TextureButton" parent="RootContainer/ActionBarContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("2_4kmhl")

[node name="Container" type="HBoxContainer" parent="RootContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 14.0

[node name="Left" type="MarginContainer" parent="RootContainer/Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LeftButton" type="TextureButton" parent="RootContainer/Container/Left"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("2_8ho6b")
stretch_mode = 5

[node name="Content" type="MarginContainer" parent="RootContainer/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 7.0

[node name="Screenshot" type="TextureRect" parent="RootContainer/Container/Content"]
unique_name_in_owner = true
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="Right" type="MarginContainer" parent="RootContainer/Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RightButton" type="TextureButton" parent="RootContainer/Container/Right"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("3_ph3nu")
stretch_mode = 5

[connection signal="pressed" from="RootContainer/ActionBarContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="RootContainer/Container/Left/LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="RootContainer/Container/Right/RightButton" to="." method="_on_right_button_pressed"]
